# lats

./: .ccview-metafile.xml  .nautilus-metafile.xml  .tm_project.cache  ChangeLog  Look_at_the_stars.prj  Look_at_the_stars.pws  Makefile.am  Makefile.in  README  acconfig.h  aclocal.m4  config.h.in  configure  configure.in  lats-2.gladep  lats.glade  look_at_the_stars.desktop.in  look_at_the_stars.glade  look_at_the_stars.glade-old  strings.tbl  tags.cache  tm.tags  trans.tbl
htdocs/: body.html  index.html  index.php  lats.css  left_pane.html  right_pane.html  titelbar.html
intl/: Makefile
m4/: ChangeLog  Makefile.in
macros/: Makefile.in
pixmaps/: Makefile  Makefile.am  Makefile.in
pixmaps/.xvpics/: look_at_the_stars_icon.xpm
po/: ChangeLog  POTFILES.in  look_at_the_stars.pot
src/: .imageview.c.swp  Makefile.am  Makefile.in  bgtiles.xpm  brokenimage.xpm  callbacks.c  callbacks.h  colors.c  colors.h  defaultbg.xpm  dirlist.c  dirlist.h  fullscreenwindow.c  gtkentry.c  house.xpm  imagelist.c  imagelist.h  imageview.c  imageview.h  importedfuncs.c  importedfuncs.h  interface.c  interface.h  lats_slide_template.h  loading.xpm  look_at_the_stars_bg.xpm  look_at_the_stars_icon.xpm  lookfordirentries.c  main.c  mainwindow.c  mainwindow.h  pixbuf_util.c  pixbuf_util.h  prefswindow.c  search.xpm  settings.c  settings.h  spider.xpm  splash.c  splash.h  (+13 more)
src/.xvpics/: lats_slide_template.c  lats_slide_template.xpm  lats_slide_template_mask.xpm  look_at_the_stars_splash.xpm
