## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

look_at_the_stars_pixmapsdir = $(prefix)/@NO_PREFIX_PACKAGE_PIXMAPS_DIR@

look_at_the_stars_pixmaps_DATA = \
	look_at_the_stars_icon.png

EXTRA_DIST = $(look_at_the_stars_pixmaps_DATA)
